force-app/main/default/objects/Int_Agreement_Non_IFRS__c/Int_Agreement_Non_IFRS__c.object-meta.xml
<CustomObject>
    <description>Int Agreement Non IFRS</description>
    <label>Int Agreement Non IFRS</label>
    <nameField>
        <displayFormat>ANI-{0000000000}</displayFormat>
        <label>Agreement Non IFRS Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Non IFRS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>