force-app/main/default/objects/Int_Agreement_Non_IFRS__c/fields/Accounting_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Type_Code__c</fullName>
    <description>Accounting Type Code</description>
    <label>Accounting Type Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>