force-app/main/default/objects/Int_Agreement_Non_IFRS__c/fields/FED_Flag_Only_Code__c.field-meta.xml
<CustomField>
    <fullName>FED_Flag_Only_Code__c</fullName>
    <description>FED Flag Only Code</description>
    <label>FED Flag Only Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>