force-app/main/default/objects/Int_Agreement_Non_IFRS__c/fields/FED_GL_Code_Block__c.field-meta.xml
<CustomField>
    <fullName>FED_GL_Code_Block__c</fullName>
    <description>FED GL Code Block</description>
    <label>FED GL Code Block</label>
    <length>255</length>
    <type>Text</type>
</CustomField>